# 2048Game

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
cell/: cell.cpp  cell.h
game/: game.cpp  game.h
gameboard/: gameboard.cpp  gameboard.h
